# pbt-nca

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
configs/: pbt-interesting.json  pbt-tiny.json  slurm_h100_pbt_scale.json  slurm_h100_pbt_scale_small.json  slurm_h100_pdnca_scale_small.json
scripts/: ensure_cuda_torch.sh  paper_pbt_combined_median_3seeds.sbatch  paper_pbt_dino_elo_3seeds.sbatch  paper_pbt_dino_median_3seeds.sbatch  paper_pbt_handcrafted_3seeds.sbatch  paper_pbt_vlm_prompt_3seeds.sbatch  paper_pd_nca_baseline_3seeds.sbatch  paper_rs_baseline_3seeds.sbatch
src/: config.py  model.py  pbt.py  rs.py  train.py  viz.py  world.py
website/: index.html
